app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-app
  namespace: default
  labels:
    app: crm-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: crm-app
